add ingredient + doc
